--- a/index.html
+++ b/index.html
@@ -10,18 +10,18 @@
 
   <header>
     <nav class="navbar">
-      <!-- Logo Section -->
+      
       <div class="logo"><img src="./img/Ai--web-logo.png" class="ai-web-logo" alt=""></div>
 
       <!-- Navigation Links Section -->
       <div class="nav-links">
-        <a href="#">Home</a>
-        <a href="#">Features</a>
-        <a href="#">Token</a>
-        <a href="#">About</a>
-        <a href="#">Contact</a>
+        <a href="#" class="anchor-style">Home</a>
+        <a href="#" class="anchor-style">Features</a>
+        <a href="#" class="anchor-style">Token</a>
+        <a href="#" class="anchor-style">About</a>
+        <a href="#" class="anchor-style">Contact</a>
         <a href="./pages/subscription-page.html" class="Subscri-btn">Subscription</a>
-        <a href="./user-registration/register.html" class="sign-up">Sign Up</a>
+        <a href="./backend/user-registration/register.html" class="sign-up">Sign Up</a>
       </div>
     </nav>
   </header>
@@ -34,7 +34,7 @@
         <a href="#features" class="cta-button">Get Started</a>
     </div>
     <video autoplay muted loop class="background-video">
-        <source src="./img/ai-face-video.mp4" type="video/mp4">
+        <source src="./img/bg-video.mp4" type="video/mp4">
     </video>
 </section>
 
@@ -44,13 +44,13 @@
     <div class="container">
         <div class="video-box">
             <video autoplay muted loop class="demo-video">
-                <source src="./img/ai-face-video.mp4" type="video/mp4">
+                <source src="./img/face-search.mp4" type="video/mp4">
             </video>
         </div>
         <div class="text-content">
             <h2>Discover FacesearchAI</h2>
             <p>Use a single photo to find all the images of yourself on the internet. See how FacesearchAI can revolutionize the way you search for images online.</p>
-            <a href="#try" class="cta-button">Try It Now</a>
+            <a href="./pages/image-generate.html" class="cta-button">Try It Now</a>
         </div>
     </div>
 </section>
